# wakaama

./: .clang-format  .cmake-format  README.md  sonar-project.properties  wakaama.cmake
.github/: dependabot.yml
.github/workflows/: build.yaml  codeql-analysis.yml  coverage.yaml  main.yml  multiarch.yaml  scorecard.yml
coap/: block.c  transaction.c
coap/er-coap-13/: er-coap-13.c  er-coap-13.h
core/: bootstrap.c  discover.c  internals.h  liblwm2m.c  list.c  management.c  objects.c  observe.c  packet.c  registration.c  uri.c  utils.c
examples/: CMakeLists.txt
examples/bootstrap_server/: CMakeLists.txt  bootstrap_info.c  bootstrap_info.h  bootstrap_server.c
examples/client/: CMakeLists.txt  lwm2mclient.c  object_access_control.c  object_connectivity_moni.c  object_connectivity_stat.c  object_device.c  object_firmware.c  object_location.c  object_security.c  object_server.c  object_test.c  system_api.c
examples/lightclient/: CMakeLists.txt  lightclient.c  object_device.c  object_security.c  object_server.c  object_test.c  test_object.c
examples/server/: CMakeLists.txt  lwm2mserver.c
examples/shared/: commandline.c  commandline.h  connection.c  connection.h  dtlsconnection.c  dtlsconnection.h  memtrace.c  platform.c  tinydtls.cmake
include/: liblwm2m.h
tests/: CMakeLists.txt  block1tests.c  convert_numbers_test.c  er_coap_coap_parse_message.c  memtest.h  senml_json_tests.c  tests.h  tlv_json_lwm2m_data_test.c  tlvtests.c  unittests.c  uritests.c
tests/fuzzing/: CMakeLists.txt  fuz_coap_parse_message.c
tools/: requirements-compliance.txt
(+1 files in other folders)
